# rdb-workspace

./: Cargo.toml  README.md  index.html
rdb/: Cargo.toml  build.rs
rdb-client/: Cargo.toml  build.rs
rdb-client/src/: lib.rs  main.rs
rdb-server/: Cargo.toml
rdb-server/benches/: benchmarks.rs
rdb-server/src/: main.rs
rdb/src/: lib.rs  main.rs
rdb/tests/: integration_tests.rs
server/: Cargo.toml
server/src/: main.rs
shared-memory-allocator/: Cargo.toml  README.md
shared-memory-allocator/src/: bindings.rs  lib.rs
