[package]
name = "rdb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.17"
simple_logger = "2.2.0"
serde = "1.0.143"
log-derive = "0.4.1"
thiserror = "1.0.32"

bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.83", optional = true }

[dev-dependencies]
rand = "0.8.5"
indicatif = "0.17.0"

[features]
default = ["bincode"]
bincode = ["dep:bincode"]
json = ["dep:serde_json"]