[package]
name = "rdb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "2.2.0"

serde = { version = "1.0.142", features = ["derive"] }
shared-memory-allocator = { path="../shared-memory-allocator" }
thiserror = "1.0.32"

bincode = { version = "1.3.3", optional=true}
serde_json = {version = "1.0.83", optional=true}


[features]
default = ["bincode"]
bincode = ["dep:bincode"]
json = ["dep:serde_json"]