[package]
name = "rdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "2.2.0"

serde = { version = "1.0.142", features = ["derive"] }
shared-memory-allocator = { path = "../shared-memory-allocator" }
thiserror = "1.0.32"

bincode = "1.3.3"

ctrlc = "3.2.3" # Catching `SIGINT` (e.g. `ctrl-c`)
clap = { version = "3.2.20",features = ["derive"] }

log-derive = "0.4.1"

[dev-dependencies]
rand = "0.8.5"
indicatif = "0.17.0"
libc = "0.2.132"
sequential-test = { git = "https://github.com/JonathanWoollett-Light/sequential-test/" }