[package]
name = "shared-memory-allocator"
version = "0.1.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2021"
description = "An extremely unsafe experiment in writing a custom allocator to use linux shared memory."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/shared-memory-allocator"
documentation = "https://docs.rs/shared-memory-allocator/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = {version="0.2.127",features=["extra_traits"]}
rand = "0.8.5"
log = "0.4.17"
thiserror = "1.0.32"
log-derive = "0.4.1"

[dev-dependencies]
simple_logger = "2.3.0"
sequential-test = "0.2.4"